[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/Player_Light_Radius.png" type="Texture" id=1]
[ext_resource path="res://Art/NaGaDeMon.png" type="Texture" id=2]
[ext_resource path="res://Art/Snake_Head.png" type="Texture" id=3]
[ext_resource path="res://Enemies/NaGaDeMon.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 16.5104

[sub_resource type="CircleShape2D" id=2]
radius = 232.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.01377

[node name="NaGaDeMon" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
mode = 1
range_z_max = 0

[node name="Sightrange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sightrange"]
shape = SubResource( 2 )

[node name="Heads" type="Node2D" parent="."]

[node name="Head1" type="Node2D" parent="Heads"]

[node name="Sprite" type="Sprite" parent="Heads/Head1"]
position = Vector2( -9.98565, 0.817928 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Heads/Head1"]
position = Vector2( 0, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Heads/Head1/Area2D"]
position = Vector2( -22.1054, 15.8691 )
shape = SubResource( 3 )

[node name="Head2" type="Node2D" parent="Heads"]

[node name="Sprite" type="Sprite" parent="Heads/Head2"]
position = Vector2( -9.98565, 0.817928 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Heads/Head2"]
position = Vector2( 0, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Heads/Head2/Area2D"]
position = Vector2( -22.1054, 15.8691 )
shape = SubResource( 3 )

[node name="Head3" type="Node2D" parent="Heads"]

[node name="Sprite" type="Sprite" parent="Heads/Head3"]
position = Vector2( -9.98565, 0.817928 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Heads/Head3"]
position = Vector2( 0, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Heads/Head3/Area2D"]
position = Vector2( -22.1054, 15.8691 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true
[connection signal="body_entered" from="Sightrange" to="." method="_on_Sightrange_body_entered"]
[connection signal="body_entered" from="Heads/Head1/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Heads/Head2/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Heads/Head3/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
